--- a/.pages.yml
+++ b/.pages.yml
@@ -1,1 +1,14 @@
 media: src/_includes/img
+content:
+  - name: posts
+    label: Posts
+    type: collection
+    path: src/posts
+    fields:
+      - { name: title, label: Title, type: string }
+      - { name: description, label: Description, type: string, options: { maxlength:160 } }
+      - { name: date, label: Date, type: date }
+      - { name: tags, label: Tags, type: string }
+      - { name: navlogo, label: Nav Logo, type: string }
+      - { name: layout, label: Layout, type: string, hidden: true, default: layouts/post.njk }
+      - { name: image, label: Image, type: image }
