--- a/.pages.yml
+++ b/.pages.yml
@@ -7,7 +7,7 @@ content:
     fields:
       - { name: title, label: Title, type: string }
       - { name: description, label: Description, type: string, options: { maxlength:160 } }
-      - { name: date, label: Date, type: date }
+      - { name: date, label: Date, type: date, options: { format: YYYY-MM-DD HH:mm, time: true } }
       - { name: tags, label: Tags, type: string }
       - { name: navlogo, label: Nav Logo, type: string }
       - { name: layout, label: Layout, type: string, hidden: true, default: layouts/post.njk }
